@@ -1,5 +1,5 @@
 .\"
-.\" Sccsid @(#)cp.1	1.22 (gritter) 1/24/05
+.\" Sccsid @(#)cp.1	1.23 (gritter) 2/5/05
 .\" Parts taken from cp(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -32,7 +32,7 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH CP 1 "1/24/05" "Heirloom Toolchest" "User Commands"
+.TH CP 1 "2/5/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 cp \- copy files
 .SH SYNOPSIS
@@ -71,13 +71,6 @@ For
 .BR /usr/5bin/cp ,
 this flag will be automatically disabled
 if standard input is not a terminal.
-Overrides the
-.B \-f
-option in
-.BR /usr/5bin/s42/cp ,
-.BR /usr/5bin/posix/cp ,
-and
-.BR /usr/5bin/posix2001/cp .
 .TP
 .B \-p
 .B Cp
@@ -106,13 +99,6 @@ The following options have been added by POSIX.2:
 If overwriting a target file fails,
 .B cp
 will try to unlink that file and proceed.
-Overrides the
-.B \-i
-option in
-.BR /usr/5bin/s42/cp ,
-.BR /usr/5bin/posix/cp ,
-and
-.BR /usr/5bin/posix2001/cp .
 .TP
 .B \-R
 The source file operands may be directories
